[package]
name = "rust-code"
version = "0.1.0"
edition = "2021"
authors = ["Aleksas Girenas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usbd-human-interface-device = "0.3.1"
usb-device = "0.2.9"
packed_struct = { version = "0.10.0", default-features = false }
frunk = { version = "0.4.0", default-features = false }
fugit = "0.3.6"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.5.0"