[package]
name = "rust-code"
version = "0.1.0"
edition = "2021"
authors = ["Aleksas Girenas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usbd-human-interface-device = "0.3.1"
usb-device = "0.2.9"
fugit = "0.3.6"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
rp-pico = "0.5.0"
rp2040-hal = "0.6.0"
ssd1309 = "0.3.0"
embedded-graphics = "0.7.1"
display-interface-i2c = "0.4.0"
panic-halt = "0.2.0"